--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.414.0",
     "moment": "^2.30.1",
-    "next": "14.2.5",
-    "next-auth": "^4.24.7",
+    "next": "^13.4.10",
+    "next-auth": "^4.22.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
